fixed image stretching for hack and blueprint pages

--- a/components/blueprint.module.css
+++ b/components/blueprint.module.css
@@ -88,6 +88,7 @@
 
 .column{
   width: 48%;
+  height: 100%;
 }
 
 .photo{
